width: fit:content fixes the spacing issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.btn-group > input[type="radio"].btn::before {
-  display: block;
-}
